Pull request #318: TND-6339: fix incorrect error in the condition field when editing the content of a promocampaign
Squashed commit of the following:

commit c6fae909a061ce80dc817d74efbd2d593bfcbb02
Author: OUT-Chumayan-BA <BAChumayan@sberbank.ru>
Date:   Wed Nov 10 11:47:21 2021 +0300

    TND-6339: add constant for max number of characters in the сonditions field and function to get the max length rule

commit 1150f450e1c06f4f8a15c8907eba22d75dd685dc
Author: OUT-Chumayan-BA <BAChumayan@sberbank.ru>
Date:   Wed Nov 10 09:17:50 2021 +0300

    TND-6339: add private rule for the maximum number of characters in the сonditions field

commit 19625fb59f0af33e933334b4d092e63bc5f79675
Author: OUT-Chumayan-BA <BAChumayan@sberbank.ru>
Date:   Tue Nov 9 12:35:47 2021 +0300

    TND-6339: fix incorrect error in the condition field when editing the content of a promocampaign

--- a/src/containers/PromoCampaignPage/PromoCampaign/PromoCampaignInfo/PromoCampaignInfo.module.css
+++ b/src/containers/PromoCampaignPage/PromoCampaign/PromoCampaignInfo/PromoCampaignInfo.module.css
@@ -57,6 +57,7 @@
 
 .infoDetail {
     margin-top: 15px;
+    word-break: break-word;
 }
 
 .containerStep {
